--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </tbody>
   </table>
 
-  <h3>Keranjang Belanja</h3>
+  <h3 id="keranjang">Keranjang Belanja</h3>
   <table class="table table-striped-columns table-bordered border-primary" id="daftar-keranjang">
     <thead class="table-primary">
       <tr>
@@ -45,7 +45,7 @@
   </table>
 
   <script type="module">
-    import { ambilDaftarBarang, tambahBarangKeKeranjang, ambilDaftarBarangDiKeranjang } from './main.js';
+    import { ambilDaftarBarang, tambahBarangKeKeranjang, ambilDaftarBarangDiKeranjang, hapusBarangDariKeranjang } from './main.js';
 
     $(document).ready(async function() {
       async function tampilBarangDiKeranjang() {
@@ -65,7 +65,7 @@
             "<td>" + data.nama + "</td>" +
             "<td>" + data.harga + "</td>" +
             "<td>" + data.jumlah + "</td>" +
-            "<td>" + "link hapus" + "</td>" +
+            "<td>" + "<a href='#' class='link-hapus' data='" + data.id + "'><i class='bi bi-trash'></i></a>" + "</td>" +
             "</tr>"
           )
 
@@ -87,7 +87,7 @@
           "<td>" + nomor + "</td>" +
           "<td>" + data.item + "</td>" +
           "<td>" + data.harga + "</td>" +
-          "<td>" + "<a href='#' class='me-2 link-keranjang' data='" + data.id + "' data-nama='" + data.item + "' data-harga='" + data.harga + "'><i class='bi bi-cart-plus'></i></a>" + "</td>" +
+          "<td>" + "<a href='#keranjang' class='me-2 link-keranjang' data='" + data.id + "' data-nama='" + data.item + "' data-harga='" + data.harga + "'><i class='bi bi-cart-plus'></i></a>" + "</td>" +
           "</tr>"
         )
 
@@ -111,6 +111,14 @@
         console.log("menambah barang ke keranjang")
 
         await tampilBarangDiKeranjang()
+      })
+      
+      // menghapus item dari keranjang
+      $(".link-hapus").click(async function() {
+        await hapusBarangDariKeranjang($(this).attr('data'))
+        
+        // refresh halaman
+        location.reload()
       })
     })
   </script>
